test/libsolidity/syntaxTests/indexing/function_type_without_index.sol
contract C {
  function f() public {
    f[];
  }
}
// ----
// TypeError: (41-42): Indexed expression has to be a type, mapping or array (is function ())
